[tool.poetry]
name = "my-project-321"
# Do not touch the version
# Is is edited dynamically by the CI job
version = "1.0.0"
description = "Prints out Hello World!"
authors = ["Jan Bronicki <janbronicki@gmail.com>",]
readme = "README.md"
# homepage = ""
# repository = ""

[tool.poetry.dependencies]
python = ">=3.10, <4"


[tool.poetry.group.format.dependencies]
black = "^24.10.0"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
tox = "^4.24.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
toml = "^0.10.2"


[tool.poetry.group.lint.dependencies]
pylint = "^3.3.3"
pytest = "^8.3.4"


[tool.poetry.group.type_check.dependencies]
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
